k8s/03-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: produto-service
spec:
  replicas: 1
  selector:
    matchLabels: { app: mysql }
  template:
    metadata:
      labels: { app: mysql }
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
          readinessProbe:
            exec: { command: ["mysqladmin", "ping", "-h", "localhost", "-uroot", "-p$(MYSQL_ROOT_PASSWORD)"] }
            initialDelaySeconds: 15
            periodSeconds: 5
      volumes:
        - name: mysql-data
          persistentVolumeClaim: { claimName: mysql-data }
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: produto-service
spec:
  selector: { app: mysql }
  ports:
    - port: 3306
      targetPort: 3306
