k8s/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: produto-service
  namespace: produto-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: produto.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: produto-service
                port:
                  number: 8080
